tests/machine/x/c/right_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/right_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/right_join.c:75:3: error: unknown type name ‘list_int’
   75 |   list_int tmp3 = list_int_create(orders.len * customers.len);
      |   ^~~~~~~~
/workspace/mochi/tests/machine/x/c/right_join.c:75:19: warning: implicit declaration of function ‘list_int_create’ [-Wimplicit-function-declaration]
   75 |   list_int tmp3 = list_int_create(orders.len * customers.len);
      |                   ^~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/right_join.c:86:11: error: request for member ‘data’ in something not a structure or union
   86 |       tmp3.data[tmp4] = (resultItem){.customerName = c.name, .order = o};
      |           ^
/workspace/mochi/tests/machine/x/c/right_join.c:91:11: error: request for member ‘data’ in something not a structure or union
   91 |       tmp3.data[tmp4] = (resultItem){.customerName = c.name, .order = o};
      |           ^
/workspace/mochi/tests/machine/x/c/right_join.c:95:7: error: request for member ‘len’ in something not a structure or union
   95 |   tmp3.len = tmp4;
      |       ^
/workspace/mochi/tests/machine/x/c/right_join.c:96:28: error: invalid initializer
   96 |   list_resultItem result = tmp3;
      |                            ^~~~
/workspace/mochi/tests/machine/x/c/right_join.c:100:9: error: used struct type value where scalar is required
  100 |     if (entry.order) {
      |         ^~~~~
/workspace/mochi/tests/machine/x/c/right_join.c:104:19: warning: format ‘%g’ expects argument of type ‘double’, but argument 2 has type ‘int’ [-Wformat=]
  104 |       printf("%.16g ", entry.order.id);
      |               ~~~~^    ~~~~~~~~~~~~~~
      |                   |               |
      |                   double          int
      |               %.16d
/workspace/mochi/tests/machine/x/c/right_join.c:106:19: warning: format ‘%g’ expects argument of type ‘double’, but argument 2 has type ‘int’ [-Wformat=]
  106 |       printf("%.16g\n", entry.order.total);
      |               ~~~~^     ~~~~~~~~~~~~~~~~~
      |                   |                |
      |                   double           int
      |               %.16d

   1: #include <stdio.h>
